@@ -1,0 +1,9 @@
+;;
+;; test user configuration file
+;; $Id: testuser.conf,v 1.1 2004/01/29 07:19:18 tahara Exp $
+
+(("gandalf" . "gf6L/odXbD7LIkJvjleEc4KRes8="))
+
+;; Local variables:
+;; mode: scheme
+;; end:
